styles/app.css
.container {
  width: 50vw;
}
.card {
  width: 50vw;
  height: 300px;
}

@media screen and (max-width: 800px) {
  .card {
    width: 80vw;
  }
  .container {
    width: 80vw;
  }
}

.bg-primary {
  background: linear-gradient(
    90deg,
    rgba(243, 70, 110, 0.9780287114845938) 0%,
    rgba(219, 71, 206, 1) 60%,
    rgba(82, 71, 239, 1) 100%
  );
}

.border-primary {
  border-color: linear-gradient(
    90deg,
    rgba(243, 70, 110, 0.9780287114845938) 0%,
    rgba(219, 71, 206, 1) 60%,
    rgba(82, 71, 239, 1) 100%
  );
}

.color-primary {
  color: linear-gradient(
    90deg,
    rgba(243, 70, 110, 0.9780287114845938) 0%,
    rgba(219, 71, 206, 1) 60%,
    rgba(82, 71, 239, 1) 100%
  );
}

